Admindashboard sidebar collapse fixed with show/hide button

--- a/public/css/admincss.css
+++ b/public/css/admincss.css
@@ -7,6 +7,7 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 /*================ TopBar ================*/
 .navbar {
@@ -20,7 +21,7 @@ body {
 .navbar a, ul, li{
     color: inherit;
     list-style: none;
-    padding-left: 10px;
+    padding-left: 15px;
 }
 .navbar a:hover {
     text-decoration: underline;
@@ -35,7 +36,6 @@ body {
 }
 
 /*================ Left SideBar ================*/
-
 .sidebar {
     height: 100%;
     width: 200px;
@@ -49,7 +49,7 @@ body {
 }
 .sidebar a {
     color: white;
-    padding: 8px 8px 8px 32px;
+    padding: 10px 8px 8px 32px;
     text-decoration: none;
     display: block;
     transition: 0.5s;
@@ -77,6 +77,10 @@ body {
 .openbtn:hover {
      background-color: #444;
  }
+
+.hidden{
+    visibility: hidden;
+}
 .sidebar-title{
     margin-top: 40px;
 }
@@ -90,7 +94,17 @@ body {
     color: white;
 }
 
+
+
+
 /*================ Right SideBar ================*/
+#dashboard-cards{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+
+
 /*.xp-vertical {
     background-color: white;
     height: auto;
